Merged uckelman-findbugs 4870, 4871, 4873, 4875. * Removed useless toString() calls. * Switched 'new Boolean' to Boolean.valueOf(). * Use more efficient Map.entrySet() instead of Map.keySet() + Map.get() for iterating over Maps. * Added imports. * Remove useless assignment. * Minor cosmetic changes.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@4884 67b53d14-2c14-4ace-a08f-0dab2b34000c